# USBqemu-wheel

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  cut2.cpp  eyetoy_regs.txt  hex.py  travis.sh  usb.txt
Release/: usb256M_fat32.img.bz2  usb4G.img.bz2
cmake/: FindLibUSB.cmake  Toolchain-cross-mingw32-linux.cmake  linux-compiler-i386-multilib.cmake
debian/: changelog  control  copyright  create_built_tarball.sh  install-debian.in  install-ubuntu.in  install.in  rules  watch
debian/source/: options
src/: CMakeLists.txt  PS2Edefs.h  PS2Etypes.h  USB.cpp  USB.h  USBqemu.dsw  USBqemu.plg  USBqemu.vcxproj  USBqemu.vcxproj.filters  configuration.cpp  configuration.h  device_init.cpp  deviceproxy.cpp  deviceproxy.h  gtk.h  helpers.h  icon_buzz_24.cpp  osdebugout.cpp  osdebugout.h  platcompat.h  proxybase.h  ringbuffer.cpp  ringbuffer.h
src/Win32/: Config-win32.cpp  Config-win32.h  Config.cpp  Config.h  USBDialog.rc  USBlinuz.def  USBlinuz.rc  USBlinuz_vc2005.vcproj  USBlinuz_vc2005_x64.sln  USBlinuz_vc2008b2.sln  USBlinuz_vc2008b2.vcproj  Win32.cpp  resource.h
src/common/: common.cpp  common.h  hid.cpp  rawinput.cpp  rawinput.h
src/ddk/: setupapi.lib
src/dynlink/: pulse.cpp  pulse.h
src/libsamplerate/: float_cast.h  samplerate.c  src_linear.c  src_sinc.c  src_zoh.c
src/linux/: actualfile.h  config-gtk.cpp  config.cpp  config.h  ini.c  ini.h  util.cpp
src/old/: README.txt  USBlinuz_vc2005.sln  USBqemu.dsp  USBqemu.opt  USBqemu.sln
src/qemu-usb/: USBinternal.h  bus.cpp  core.cpp  desc.cpp  desc.h  glib.cpp  glib.h  hid.h  iov.cpp  iov.h  memops.cpp  qusb.h  usb-base.cpp  usb-hid.cpp  usb-hub.cpp  usb-kbd.cpp  usb-msd-fat32.cpp  usb-msd-gtk.cpp  usb-msd-linux.cpp  usb-msd-win32.cpp  usb-msd.cpp  usb-msd.h  usb-ohci.cpp  usb.h  vl.cpp  vl.h
src/shared/: hidapi.cpp  hidapi.h  rawinput.cpp  rawinput.h  ringbuffer.cpp  ringbuffer.h  shared.cpp  shared.h
src/usb-eyetoy/: api_init_linux.cpp  api_init_win32.cpp  cam-linux.cpp  cam-linux.h  cam-windows.cpp  cam-windows.h  ov519.h  usb-eyetoy-webcam.cpp  usb-eyetoy-webcam.h  usb-eyetoy.cpp  videodev.h  videodeviceproxy.cpp  videodeviceproxy.h
src/usb-hid/: api_init_linux.cpp  api_init_win32.cpp  hidproxy.cpp  hidproxy.h  noop.cpp  noop.h  usb-hid.cpp  usb-hid.h
src/usb-hid/evdev/: evdev-gtk.cpp  evdev.cpp  evdev.h
src/usb-hid/raw/: rawinput.cpp  rawinput.h  usb-hid-raw.cpp
src/usb-mic/: api_init_linux.cpp  api_init_win32.cpp  audio-linux.cpp  audio.h  audiodev-noop.cpp  audiodev-noop.h  audiodev-pulse.cpp  audiodev-pulse.h  audiodev-wasapi.cpp  audiodev-wasapi.h  audiodev.h  audiodeviceproxy.cpp  audiodeviceproxy.h  audiosourceproxy.cpp  audiosourceproxy.h  audiosrc-linux.cpp  audiosrc-noop.cpp  audiosrc-pulse.cpp  audiosrc-wasapi.cpp  audiosrc-win32.cpp  audiosrc.h  mic-audiodefs.h  usb-headset.cpp  usb-headset.h  usb-mic-logitech.cpp  usb-mic-singstar.cpp  usb-mic-singstar.h  usb-mic.c  usb.h
src/usb-midi/: api_init_linux.cpp  api_init_win32.cpp  mididev-keyboards.cpp  mididev-keyboards.h  mididev-noop.cpp  mididev-noop.h  mididev.h  midideviceproxy.cpp  midideviceproxy.h  usb-midi-pc300.cpp  usb-midi-pc300.h  usb-midi-ux16.cpp  usb-midi-ux16.h
src/usb-midi/win32/: win32midi.cpp  win32midi.h
src/usb-msd/: usb-msd-gtk.cpp  usb-msd-win32.cpp  usb-msd.cpp  usb-msd.h
src/usb-pad/: api_init_linux.cpp  api_init_win32.cpp  bitjuggling.cpp  config.h  padproxy.cpp  padproxy.h  usb-pad-ff.cpp  usb-pad-joydev.cpp  usb-pad-linux.cpp  usb-pad-win32.cpp  usb-pad.cpp  usb-pad.h  usb-seamic.cpp
src/usb-pad/dx/: di.h  dialog.h  dinput-config.cpp  dinput.cpp  dx.h  global.h  ini.h  usb-pad-dx.cpp  usb-pad-dx.h  versionproxy.h  versionproxy.rc
src/usb-pad/evdev/: evdev-ff.cpp  evdev-ff.h  evdev-gtk.cpp  evdev.cpp  evdev.h  shared-gtk.cpp  shared.h
src/usb-pad/joydev/: joydev-gtk.cpp  joydev.cpp  joydev.h
src/usb-pad/lg/: lg_ff.h
src/usb-pad/raw/: hid.cpp  hid.h  raw-config-res.h  raw-config.cpp  raw-config.h  raw-config.rc  usb-pad-raw.cpp  usb-pad-raw.h
src/usb-pt/: libusbcontext.cpp  libusbcontext.h  usb-pt-gtk.cpp  usb-pt-win32.cpp  usb-pt.cpp  usb-pt.h
src/utility/: fnv.cpp  fnv.h
udev/: 99-logitech-wheels.rules
